--- a/prototypes/trivia_widget/wide_styles.css
+++ b/prototypes/trivia_widget/wide_styles.css
@@ -911,7 +911,7 @@ p#skip_question i {
 
 .submission_info_container {
     visibility: hidden;
-    display: block;
+    display: table;
     position: absolute;
     height: 231px;
     width: 259px;
@@ -2464,10 +2464,12 @@ span.results_chart_value {
     }
 
     p.submission_info {
-        top: 100px;
+        top: 3px;
         font-size: 12px;
         color: #fff;
         z-index: 3;
+        vertical-align: middle;
+        display: table-cell;
     }
 
     .results_charts_container:nth-of-type(2) {
